--- a/上課內容/2月22/index.html
+++ b/上課內容/2月22/index.html
@@ -16,6 +16,17 @@
 <FONT SIZE=+4>那</FONT>
 <FONT SIZE=+4>多</FONT>
 
+<font face="標楷體" size="3" color="#blue">大家好</font> 
+<font face="標楷體" size="+2" color="#00ffff">我是王小明</font> 
+
+<B>華人並不愛家！？太值得我們深思了！ </B><P>
+<I華人並不愛家！？太值得我們深思了！ </I><P>
+<U>華人並不愛家！？太值得我們深思了！ </U><P>
+<S>華人並不愛家！？太值得我們深思了！ </S><P>
+<TT>華人並不愛家！？太值得我們深思了！ </TT><P>
+<SUP>華人並不愛家！？太值得我們深思了！ </SUP><P>
+<SUB>華人並不愛家！？太值得我們深思了！</SUB><P>
+
 
 </body>
 </html>
