--- a/上課內容/2月22/index.html
+++ b/上課內容/2月22/index.html
@@ -9,24 +9,21 @@
 
 淡江大學<br />資工系
 <h5>專題實驗(一)</h5>
-<font face=“標楷體”> 床前明月光，疑似地上光</font>
-
-<FONT SIZE=+2>李</FONT>
-<FONT SIZE=+3>奧</FONT>
-<FONT SIZE=+4>那</FONT>
-<FONT SIZE=+4>多</FONT>
-
-<font face="標楷體" size="3" color="#blue">大家好</font> 
-<font face="標楷體" size="+2" color="#00ffff">我是王小明</font> 
-
-<B>華人並不愛家！？太值得我們深思了！ </B><P>
+<p><font face=“標楷體”> 床前明月光，疑似地上光</font>  </p>
+<p><FONT SIZE=+2>李</FONT>
+  <FONT SIZE=+3>奧</FONT>
+  <FONT SIZE=+4>那</FONT>
+  <FONT SIZE=+4>多</FONT>  </p>
+<p><font face="標楷體" size="3" color="#blue">大家好</font> 
+  <font face="標楷體" size="+2" color="#00ffff">我是王小明</font> 
+  
+  <B>華人並不愛家！？太值得我們深思了！ </B></p>
+<P>
 <I華人並不愛家！？太值得我們深思了！ </I><P>
 <U>華人並不愛家！？太值得我們深思了！ </U><P>
-<S>華人並不愛家！？太值得我們深思了！ </S><P>
-<TT>華人並不愛家！？太值得我們深思了！ </TT><P>
-<SUP>華人並不愛家！？太值得我們深思了！ </SUP><P>
-<SUB>華人並不愛家！？太值得我們深思了！</SUB><P>
-
-
+<S>華人並不愛家！？太值得我們深思了！ </S>
+<P>
+  
+  
 </body>
 </html>
