--- a/上課內容/2月22/index.html
+++ b/上課內容/2月22/index.html
@@ -9,7 +9,7 @@
 
 淡江大學<br />資工系
 <h5>專題實驗(一)</h5>
-<p><font face=“標楷體”> 床前明月光，疑似地上光</font>  </p>
+<p><font face=“標楷體”> 床前明月光，疑似地上光，光光?</font></p>
 <p><FONT SIZE=+2>李</FONT>
   <FONT SIZE=+3>奧</FONT>
   <FONT SIZE=+4>那</FONT>
@@ -19,7 +19,7 @@
   
   <B>華人並不愛家！？太值得我們深思了！ </B></p>
 <P>
-<I華人並不愛家！？太值得我們深思了！ </I><P>
+<I>華人並不愛家！？太值得我們深思了！ </I><P>
 <U>華人並不愛家！？太值得我們深思了！ </U><P>
 <S>華人並不愛家！？太值得我們深思了！ </S>
 <P>
