--- a/上課內容/2月22/上課內容.html
+++ b/上課內容/2月22/上課內容.html
@@ -14,8 +14,8 @@
   <FONT SIZE=+3>奧</FONT>
   <FONT SIZE=+4>那</FONT>
   <FONT SIZE=+4>多</FONT>  </p>
-<p><font face="標楷體" size="3" color="#blue">大家好</font> 
-  <font face="標楷體" size="+2" color="#00ffff">我是王小明</font> 
+<p><font face="標楷體" size="3" color="#261f1d">大家好</font> 
+  <font face="標楷體" size="+2" color="#c29082">我是王小明</font> 
   
   <B>華人並不愛家！？太值得我們深思了！ </B></p>
 <P>
