助教已審核過，最後版本。

--- a/上課作業/2月22日/上課內容.html
+++ b/上課作業/2月22日/上課內容.html
@@ -19,11 +19,11 @@
 <p><font face="標楷體" size="3" color="#261f1d">大家好</font> 
    <font face="標楷體" size="+2" color="#c29082">我是王小明</font> 
   
-<B>華人並不愛家！？太值得我們深思了！ </B></p>
+<B>華人並不愛家！？太值得我們深思了!</B></p>
 
 <I>華人並不愛家！？太值得我們深思了！ </I><P>
 <U>華人並不愛家！？太值得我們深思了！ </U><P>
-<S>華人並不愛家！？太值得我們深思了！ </S>  
+<S>華人並不愛家！？太值得我們深思了！  </S>  
   
 </body>
 </html>
