新增超連結

--- a/上課作業/3月1日/隨堂練習.html
+++ b/上課作業/3月1日/隨堂練習.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-<P><img src="app12485721.jpg" width="499" height="647" alt=""/>  
-  
+<P><a href="main.html"><img src="pic/app12485721.jpg" width="499" height="647" alt=""/></a>
+<P>愛食物。樂廚藝
+<P><a href="love-ifood.com/tw" target="_blank">love-ifood.com/tw</a>
+<P>
+<P>
 </body>
 </html>
