--- a/上課作業/3月1日/隨堂練習.html
+++ b/上課作業/3月1日/隨堂練習.html
@@ -13,5 +13,19 @@
 <P><a href="love-ifood.com/tw" target="_blank">love-ifood.com/tw</a>
 <P>
 <P>
+
+<table width="264" border="1">
+  <tr>
+    <td width="86"><div align="center">國小</div></td>
+    <td width="65"><div align="center">國中</div></td>
+    <td width="91"><div align="center">高中</div></td>
+  </tr>
+  <tr>
+    <td>永平國小</td>
+    <td>永平國中</td>
+    <td>永平高中</td>
+  </tr>
+</table>
+
 </body>
 </html>
