--- a/上課作業/3月1日/隨堂練習.html
+++ b/上課作業/3月1日/隨堂練習.html
@@ -10,10 +10,7 @@
 <body>
 <P><a href="main.html"><img src="pic/app12485721.jpg" width="499" height="647" alt=""/></a>
 <P>愛食物。樂廚藝
-<P><a href="love-ifood.com/tw" target="_blank">love-ifood.com/tw</a>
-<P>
-<P>
-
+ <a href="love-ifood.com/tw" target="_blank">love-ifood.com/tw</a>
 <table width="264" border="1">
   <tr>
     <td width="86"><div align="center">國小</div></td>
