--- a/上課作業/3月1日/隨堂練習.html
+++ b/上課作業/3月1日/隨堂練習.html
@@ -11,18 +11,32 @@
 <P><a href="main.html"><img src="pic/app12485721.jpg" width="499" height="647" alt=""/></a>
 <P>愛食物。樂廚藝
  <a href="love-ifood.com/tw" target="_blank">love-ifood.com/tw</a>
-<table width="264" border="1">
+ 
+<TABLE BORDER=1 WIDTH=80%>
   <tr>
-    <td width="86"><div align="center">國小</div></td>
-    <td width="65"><div align="center">國中</div></td>
-    <td width="91"><div align="center">高中</div></td>
+    <th width="86"><div align="center">國小</div></th>
+    <th width="65"><div align="center">國中</div></th>
+    <th width="91"><div align="center">高中</div></th>
   </tr>
   <tr>
-    <td>永平國小</td>
-    <td>永平國中</td>
-    <td>永平高中</td>
+    <td><div align="center">永平國小</div></td>
+    <td><div align="center">永平國中</div></td>
+    <td><div align="center">永平高中</div></td>
   </tr>
 </table>
+<p>&nbsp;</p>
+<TABLE BORDER=N>
+      <TR>
+          <TH>國中</TH>
+          <TH>高中</TH>
+          <TH>大學</TH>
+      </TR>
+      <TR>
+          <TD>淡江國中</TD>
+          <TD>淡江高中</TD>
+          <TD>淡江大學</TD>
+     </TR>
+</TABLE> 
 
 </body>
 </html>
