--- a/上課作業/3月1日/left.html
+++ b/上課作業/3月1日/left.html
@@ -3,5 +3,7 @@
    <A HREF=1.html target=rightframe>自我簡介</A><p>
    <A HREF=http://www.tku.edu.tw/ target=rightframe>淡江大學</A><p>
    <A HREF=http://www.csie.tku.edu.tw/ target=rightframe>資工系系網</A><p>
+   <A HREF=2.html target=rightframe>我的課表</A><p>
+   <p>
  </BODY>
 </HTML>
